cree la carpeta pista y su controlller y service

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
         </tbody>
 
     </table>
+    <div id="container"></div>
     <div id="total"></div>
     <script src="pistas.js"></script>
 </body>
