realice metodos get y post

--- a/client/index.html
+++ b/client/index.html
@@ -20,9 +20,9 @@
         </thead>
 
         <thead>
-            <td><input type="text" name="" value="" id="identificador"></td>
+            <td><input type="number" name="" value="" id="identificador"></td>
             <td><input type="text" name="" value="" id="titulo"></td>
-            <td><input type="text" name="" value="" id="duracion"></td>
+            <td><input type="number" name="" value="" id="duracion"></td>
             <td><input type="text" name="" value="" id="interprete"></td>
         </thead>
 
