Ejercicio users, cree el service y controller

--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,8 @@
     </table>
     <div id="container"></div>
     <div id="total"></div>
-    <script src="pistas.js"></script>
+    <div id="contenedor"></div>
+    <script src="js/pistas/pistas.js"></script>
 </body>
 
 </html>
