acomode el index.html

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
             <td>Título</td>
             <td>Duración</td>
             <td>Intérprete</td>
+            <td>Lanzamiento</td>
         </thead>
 
         <thead>
@@ -24,6 +25,7 @@
             <td><input type="text" name="" value="" id="titulo"></td>
             <td><input type="number" name="" value="" id="duracion"></td>
             <td><input type="text" name="" value="" id="interprete"></td>
+            <td><input type="number" name="" value="" id="lanzamiento"></td>
         </thead>
 
         <thead>
