funcion agregar pistas y mandar un post desde el navegador

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
         <thead>
             <td colspan=4>
                 <button type="button" id="btnAgregar">Agregar</button>
-                <button type="button" id="btnDuracion">Duración</button>
+                <!-- <button type="button" id="btnDuracion">Duración</button> -->
             </td>
         </thead>
 
@@ -40,9 +40,9 @@
         </tbody>
 
     </table>
-    <div id="container"></div>
+    <!-- <div id="container"></div>
     <div id="total"></div>
-    <div id="contenedor"></div>
+    <div id="contenedor"></div> -->
     <script src="js/pistas/pistas.js"></script>
 </body>
 
