cree funciones, load,mostraVehiculos,agregarVehiculo

--- a/client/concesionaria.html
+++ b/client/concesionaria.html
@@ -17,6 +17,7 @@
         <button type="button" id="listaAutos">Autos</button>
         <button type="button" id="listarCamionetas">Camionetas</button>
     </div>
+    <div id="errorDeCarga"></div>
 
     <div id="">
         <table>
