validaciones en js de lo input

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,8 @@
     </div>
 
     <div>
+        <h2>Ingresar nuevo Vehiculo</h2>
+        
         <form action="">
 
             <label for="patente">Patente:</label>
@@ -57,13 +59,12 @@
 
             <label for="capacidad">Capacidad de carga:</label>
             <input type="number" name="" value="" id="capacidad">
-
             
-
             <input type="button" onclick="crearNuevoVehiculo()" value="Agregar">
             <!-- <button type="button" id="btnAgregar">Agregar</button> -->
             <input type="reset">
         </form>
+        <h3 id="infoCargaIncorrecta"></h3>
     </div>
 
     <div>
