Desarolle listar autos y camionetas.desarrolle el servicio de esos listar

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,8 @@
     <div id="botonesPrincipales">
         <button type="button" id="listaVehiculos">Vehiculos</button>
         <button type="button" id="listaAutos">Autos</button>
-        <button type="button" id="listarCamionetas">Camionetas</button>
+        <button type="button" id="listaCamionetas">Camionetas</button>
+        
     </div>
     <div id="errorDeCarga"></div>
 
